--- a/profile/style.css
+++ b/profile/style.css
@@ -1,3 +1,22 @@
+#sidebar {
+  position: fixed;
+  width: 30px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #6C5B7C;
+  border-radius: 2px;
+
+}
+#sidebar li{
+  list-style: none;
+  padding-bottom: 20px;
+}
+
+#page-content {
+  margin-left: 300px;
+}
+
 body{
   font-family: Alegreya;
   font-size: 16px;
@@ -11,6 +30,14 @@ body{
   max-width: 200px;
   max-height: 350px;
   border-radius: 10px;
+}
+
+.button{
+    background-color: #900048;
+    color: white;
+    font-weight: 200;
+    padding: 5px;
+    border-radius: 4px;
 }
 
 /*background: white;
@@ -31,7 +58,7 @@ body{
 }
 
 #card-nav{
-  background-color: #8EA6B4;
+  background-color: #F2F2F0;
 }
 
 table{
@@ -50,7 +77,7 @@ table{
   }
 
 .list-inline a{
-  color: #323643;
+  color: #0B3846;
 
 }
 .list-inline li{
