--- a/profile/style.css
+++ b/profile/style.css
@@ -1,3 +1,19 @@
+
+
+body {
+  font-family: Alegreya;
+  font-size: 16px;
+  text-align: center;
+  margin-left: 35px;
+  background-color: #DFD3D3;
+  /*border: 5px solid #323643;
+  border-radius: 10px;*/
+}
+
+a {
+  text-decoration: none;
+}
+
 #sidebar {
   position: fixed;
   width: 30px;
@@ -8,7 +24,7 @@
   border-radius: 2px;
 
 }
-#sidebar li{
+#sidebar li {
   list-style: none;
   padding-bottom: 20px;
 }
@@ -17,27 +33,19 @@
   margin-left: 300px;
 }
 
-body{
-  font-family: Alegreya;
-  font-size: 16px;
-  text-align: center;
-  background-color: #DFD3D3;
-  border: 5px solid #323643;
-  border-radius: 10px;
-}
-
-#avatar{
+#avatar {
   max-width: 200px;
   max-height: 350px;
   border-radius: 10px;
 }
 
-.button{
+.button {
     background-color: #900048;
     color: white;
     font-weight: 200;
     padding: 5px;
     border-radius: 4px;
+
 }
 
 /*background: white;
@@ -45,7 +53,7 @@ body{
     margin-bottom: 20px;
     border-radius: px;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);*/
-.card{
+.card {
   background-color: #F2F2F0;
 
   padding-bottom: 10px;
@@ -57,37 +65,39 @@ body{
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 }
 
-#card-nav{
+#card-nav {
   background-color: #F2F2F0;
 }
 
-table{
+table {
   width: 100%;
    text-align: center;
 }
-.table tr{
+
+.table tr {
   text-align: center;
   display: inline;
 }
 
 
-.movie_pictures{
+.movie_pictures {
   max-width:200px;
   max-height: 250px;
+  border-radius: 10px;
   }
 
-.list-inline a{
+.list-inline a {
   color: #0B3846;
 
 }
-.list-inline li{
+.list-inline li {
     display: inline;
     /*padding-left: 10px;*/
     padding-right: 20px;
     list-style: none
 }
 
-.container{
+.container {
   width: 700px;
   margin: 0 auto;
 }
