--- a/profile/style.css
+++ b/profile/style.css
@@ -36,7 +36,8 @@ a {
 #avatar {
   max-width: 200px;
   max-height: 350px;
-  border-radius: 10px;
+    border-radius: 50%;
+  box-shadow: 5px 5px 3px black;
 }
 
 .button {
